Fix minor visual issues on mobile

--- a/_scss_partials/_community.scss
+++ b/_scss_partials/_community.scss
@@ -9,6 +9,9 @@
     a {
         color: $main-color;
     }
+    h3 {
+        margin-top: 20px;
+    }
     .btn-success {
         text-align: left;
         width: 280px;
